--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Actor Box</string>
     <string name="save">Save</string>
+    <string name="validation_empty">Please enter search world!</string>
+
 </resources>
